@@ -1,0 +1,9 @@
+string fun(varargs mixed* args)
+{
+    return ({"Inh1"})+args;
+}
+
+void count(int x)
+{
+    x += 1;
+}
