@@ -1,0 +1,10 @@
+string fun(varargs mixed* args)
+{
+    return ({"Inh2"})+args;
+}
+
+
+void count(int x)
+{
+    x += 2;
+}
