@@ -1,0 +1,10 @@
+string fun(varargs mixed* args)
+{
+    return ({"Inh3"})+args;
+}
+
+
+void count(int x)
+{
+    x += 4;
+}
