@@ -1,0 +1,10 @@
+string fun(varargs mixed* args)
+{
+    return ({"Inh5"})+args;
+}
+
+
+void count(int x)
+{
+    x += 16;
+}
