@@ -1,0 +1,4 @@
+private varargs void fun()
+{
+  // I don't exist.
+}
