@@ -1,0 +1,66 @@
+inherit "inh_x";
+inherit "inh_xy";
+inherit "inh_xx";
+inherit "inh_xxx";
+inherit "inh_xxxx";
+inherit "inh_xxxxx";
+
+#include "inc/msg.inc"
+#include "inc/deep_eq.inc"
+
+#define CHECK_CALL0(pattern,result) \
+    msg("Checking %Q::fun():      \t\t\t", pattern);                                    \
+    if(deep_eq(pattern::fun(), result))                                             \
+        msg("Success.\n");                                                          \
+    else                                                                            \
+    {                                                                               \
+        errors++;                                                                   \
+        msg("FAILURE.\n");                                                          \
+    }                                                                               \
+
+#define CHECK_CALL(pattern,args,result) \
+    msg("Checking %Q::fun(...):    \t\t\t", pattern);                                 \
+    if(deep_eq(pattern::fun args, result))                                          \
+        msg("Success.\n");                                                          \
+    else                                                                            \
+    {                                                                               \
+        errors++;                                                                   \
+        msg("FAILURE.\n");                                                          \
+    }                                                                               \
+
+int run_test()
+{
+    int errors, x;
+    CHECK_CALL0("*", ({({"Inh1"}),({"Inh2"}),({"Inh3"}),({"Inh4"}),({"Inh5"})}));
+    CHECK_CALL0("inh_xx*", ({({"Inh2"}),({"Inh3"}),({"Inh4"}),({"Inh5"})}));
+    CHECK_CALL0("inh_xxx*", ({({"Inh3"}),({"Inh4"}),({"Inh5"})}));
+    CHECK_CALL0("inh_xxxx*", ({({"Inh4"}),({"Inh5"})}));
+    CHECK_CALL0("inh_xxxxx*", ({({"Inh5"})}));
+    CHECK_CALL0("inh_xxxxxx*", ({}));
+    CHECK_CALL("*", (3,1,4,1), ({({"Inh1",3,1,4,1}),({"Inh2",3,1,4,1}),({"Inh3",3,1,4,1}),({"Inh4",3,1,4,1}),({"Inh5",3,1,4,1})}));
+    CHECK_CALL("inh_x*", (3,1,4,1), ({({"Inh1",3,1,4,1}),({"Inh2",3,1,4,1}),({"Inh3",3,1,4,1}),({"Inh4",3,1,4,1}),({"Inh5",3,1,4,1})}));
+    CHECK_CALL("inh_xx*", (3,1,4,1), ({({"Inh2",3,1,4,1}),({"Inh3",3,1,4,1}),({"Inh4",3,1,4,1}),({"Inh5",3,1,4,1})}));
+    CHECK_CALL("inh_xxx*", (3,1,4,1), ({({"Inh3",3,1,4,1}),({"Inh4",3,1,4,1}),({"Inh5",3,1,4,1})}));
+    CHECK_CALL("inh_xxxx*", (3,1,4,1), ({({"Inh4",3,1,4,1}),({"Inh5",3,1,4,1})}));
+    CHECK_CALL("inh_xxxxx*", (3,1,4,1), ({({"Inh5",3,1,4,1})}));
+    CHECK_CALL("inh_xxxxxx*", (3,1,4,1), ({}));
+    // Maximum number of arguments.
+    CHECK_CALL("*", (0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,166,167,168,169,170,171,172,173,174,175,176,177,178,179,180,181,182,183,184,185,186,187,188,189,190,191,192,193,194,195,196,197,198,199,200,201,202,203,204,205,206,207,208,209,210,211,212,213,214,215,216,217,218,219,220,221,222,223,224,225,226,227,228,229,230,231,232,233,234,235,236,237,238,239,240,241,242,243,244,245,246,247,248,249,250,251,252,253),
+          ({({"Inh1",0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,166,167,168,169,170,171,172,173,174,175,176,177,178,179,180,181,182,183,184,185,186,187,188,189,190,191,192,193,194,195,196,197,198,199,200,201,202,203,204,205,206,207,208,209,210,211,212,213,214,215,216,217,218,219,220,221,222,223,224,225,226,227,228,229,230,231,232,233,234,235,236,237,238,239,240,241,242,243,244,245,246,247,248,249,250,251,252,253}),
+            ({"Inh2",0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,166,167,168,169,170,171,172,173,174,175,176,177,178,179,180,181,182,183,184,185,186,187,188,189,190,191,192,193,194,195,196,197,198,199,200,201,202,203,204,205,206,207,208,209,210,211,212,213,214,215,216,217,218,219,220,221,222,223,224,225,226,227,228,229,230,231,232,233,234,235,236,237,238,239,240,241,242,243,244,245,246,247,248,249,250,251,252,253}),
+            ({"Inh3",0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,166,167,168,169,170,171,172,173,174,175,176,177,178,179,180,181,182,183,184,185,186,187,188,189,190,191,192,193,194,195,196,197,198,199,200,201,202,203,204,205,206,207,208,209,210,211,212,213,214,215,216,217,218,219,220,221,222,223,224,225,226,227,228,229,230,231,232,233,234,235,236,237,238,239,240,241,242,243,244,245,246,247,248,249,250,251,252,253}),
+            ({"Inh4",0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,166,167,168,169,170,171,172,173,174,175,176,177,178,179,180,181,182,183,184,185,186,187,188,189,190,191,192,193,194,195,196,197,198,199,200,201,202,203,204,205,206,207,208,209,210,211,212,213,214,215,216,217,218,219,220,221,222,223,224,225,226,227,228,229,230,231,232,233,234,235,236,237,238,239,240,241,242,243,244,245,246,247,248,249,250,251,252,253}),
+            ({"Inh5",0,1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31,32,33,34,35,36,37,38,39,40,41,42,43,44,45,46,47,48,49,50,51,52,53,54,55,56,57,58,59,60,61,62,63,64,65,66,67,68,69,70,71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100,101,102,103,104,105,106,107,108,109,110,111,112,113,114,115,116,117,118,119,120,121,122,123,124,125,126,127,128,129,130,131,132,133,134,135,136,137,138,139,140,141,142,143,144,145,146,147,148,149,150,151,152,153,154,155,156,157,158,159,160,161,162,163,164,165,166,167,168,169,170,171,172,173,174,175,176,177,178,179,180,181,182,183,184,185,186,187,188,189,190,191,192,193,194,195,196,197,198,199,200,201,202,203,204,205,206,207,208,209,210,211,212,213,214,215,216,217,218,219,220,221,222,223,224,225,226,227,228,229,230,231,232,233,234,235,236,237,238,239,240,241,242,243,244,245,246,247,248,249,250,251,252,253})
+          }));
+
+    msg("Checking calls with lvalues:\t\t\t");
+    "*"::count(&x);
+    if(x == 31)
+        msg("Success.\n");
+    else
+    {
+        errors++;
+        msg("FAILURE.\n");
+    }
+    return errors;
+}
