@@ -1,6 +1,10 @@
 This file lists all changes made to the game driver in all glory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+08-Mar-2011 (Gnomi)
+  - Allow wildcarded super calls with arguments. (fixes #257)
+    (prolang.y, interpret.c)
+
 22-Feb-2011 (Gnomi)
   - Added checks for destroyed objects in clone_object(), process_string()
     and transfer(). (fixes #772)
